October 30, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * data/pcsx.glade2: Do not allow resizing for dialog boxes.
 * plugins/dfsound/spucfg-0.1df/dfsound.glade2: Likewise.
 * plugins/dfxvideo/gpucfg-0.1df/dfxvideo.glade2: Likewise.
 * plugins/dfinput/pad.h: Declare several variables as volatile.
 * plugins/dfinput/Makefile.am: Use $(SDL_CONFIG) instead of "sdl-config".

October 29, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * data/pcsx.glade2: Replaced the "Close" button on many dialog boxes to
   "OK/Cancel" buttons.
 * gui/Gtk2Gui.c: Likewise.
 * plugins/dfsound/spucfg-0.1df/dfsound.glade2: Likewise.
 * plugins/dfsound/spucfg-0.1df/main.c: Likewise.
 * plugins/dfxvideo/gpucfg-0.1df/dfxvideo.glade2: Likewise.
 * plugins/dfxvideo/gpucfg-0.1df/main.c: Likewise.
 * plugins/dfinput/dfinput.glade2: Likewise.
 * plugins/dfinput/cfg-gtk2.c: Likewise.

October 27, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfinput/xkb.c: Use XkbSetDetectableAutoRepeat() instead of
   disabling autorepeat globally.
 * po/zh_CN.po: Updated.
 * plugins/peopsxgl/gpu.c: Allow clicking close button to return to the main
   UI instead of bailing out.

October 26, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfinput/cfg.c: Fixed a bug which caused the settings for analog
   pad not correctly read from the config file.

October 25, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfinput/cfg.c: Replaced dfinput with new SDL/Xkb-based input plugin.
 * plugins/dfinput/analog.c: Likewise.
 * plugins/dfinput/Makefile.in: Likewise.
 * plugins/dfinput/cfg-gtk2.c: Likewise.
 * plugins/dfinput/pad.c: Likewise.
 * plugins/dfinput/sdljoy.c: Likewise.
 * plugins/dfinput/xkb.c: Likewise.
 * plugins/dfinput/dfinput.glade2: Likewise.
 * plugins/dfinput/Makefile.am: Likewise.
 * plugins/dfinput/pad.h: Likewise.
 * plugins/dfinput/padjoy.h: Removed.
 * configure.ac: Check for SDL on configure.
 * debian/control: Added libsdl1.2-dev to Build-Depends.